[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/8bit_plop.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 360 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
margin_left = -640.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
margin_left = 640.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="CountdownLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -29.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0.952941, 0.317647, 0.160784, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Opponent" parent="." instance=ExtResource( 2 )]

[node name="WallTop" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 640, -10 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 640, 730 )
shape = SubResource( 1 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 360 )

[node name="LeftArea" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2( -50, 360 )
shape = SubResource( 2 )

[node name="RightArea" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2( 1330, 360 )
shape = SubResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 640, 0 )
points = PoolVector2Array( 0, 0, 0, 720 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="LeftArea" to="." method="_on_LeftArea_body_entered"]
[connection signal="body_entered" from="RightArea" to="." method="_on_RightArea_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
